asg1 fixed. need circle + last part

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <body>
     <main>
         <p>CSE160 Live Hosted Submissions</p>
-        <a href="ASG0/asg0.html">Assignment 0</a>
+        <a href="ASG0/asg0.html">Assignment 0</a> <br>
+        <a href="ASG1/asg1.html">Assignment 1</a>
     </main>
 	<script src="index.js"></script>
   </body>
