--- a/ASG1/asg1.html
+++ b/ASG1/asg1.html
@@ -16,6 +16,8 @@
 
     <script src="Point.js"></script>
     <script src="Triangle.js"></script>
+    <script src="Circle.js"></script>
+
     <script src="asg1.js"></script>
 
     <p>
@@ -30,6 +32,8 @@
     
     <button type="button" id="pointButton">Point</button>
     <button type="button" id="triButton">Triangle</button>
+    <button type="button" id="circleButton">Circle</button> 
+    <label>Segments</label> <input type = "number" id = "seg">
 
     <p>
     Red <Input type="range" min="0" max="100" value="0" class ="slider" id = "redSlide">
