--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <main>
         <p>CSE160 Live Hosted Submissions</p>
         <a href="ASG0/asg0.html">Assignment 0</a> <br>
-        <a href="ASG1/asg1.html">Assignment 1</a>
+        <a href="ASG1/asg1.html">Assignment 1</a> <br>
+        <a href="ASG5A/asg5a.html">Assignment 5A</a> <br>
     </main>
 	<script src="index.js"></script>
   </body>
