--- a/ASG5A/src/asg5a.html
+++ b/ASG5A/src/asg5a.html
@@ -8,10 +8,10 @@
     <script type="importmap">
         {
             "imports": {
-              "three": "https://cdn.jsdelivr.net/npm/three@0.132.2/build/three.module.js"
-              
+                "three": "https://threejs.org/build/three.module.js",
+                "three/addons/": "https://threejs.org/examples/jsm/"
             }
-          }
+        }
     </script>
   </head>
 
