--- a/ASG5A/src/asg5a.html
+++ b/ASG5A/src/asg5a.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-    <title>Three.js - Fundamentals</title>
-    <link rel="stylesheet" href="styles.css">
-    <script type="importmap">
-        {
-            "imports": {
-                "three": "https://threejs.org/build/three.module.js",
-                "three/addons/": "https://threejs.org/examples/jsm/"
-            }
+<html lang="en">
+<head>
+    <title>Solar System</title>
+    <style>
+        body {
+            margin: 0
         }
-    </script>
-  </head>
-
-  <body>
-    <script type="module" src="asg5a.js"></script>
-    <canvas id="c"></canvas> <!--our canvas-->
-  </body>
-
+    </style>
+        <script type="importmap">
+          {
+              "imports": {
+                  "three": "https://threejs.org/build/three.module.js",
+                  "three/addons/": "https://threejs.org/examples/jsm/"
+              }
+          }
+      </script>
+</head>
+<body>
+    <script src="/main.js" type="module"></script>
+</body>
 </html>
