--- a/ASG5A/src/asg5a.html
+++ b/ASG5A/src/asg5a.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <title>Solar System</title>
-    <style>
+    <!--<style>
         body {
             margin: 0
         }
-    </style>
+    </style>-->
         <script type="importmap">
           {
               "imports": {
