--- a/ASG5A/src/asg5a.html
+++ b/ASG5A/src/asg5a.html
@@ -17,6 +17,6 @@
       </script>
 </head>
 <body>
-    <script src="main.js" type="module"></script>
+    <script src="/main.js" type="module"></script>
 </body>
 </html>
