--- a/ASG2/blockyAnimal.html
+++ b/ASG2/blockyAnimal.html
@@ -58,25 +58,13 @@
     <input type = "number" id = "seg">*/-->
 
 
+ 
     <p>
-    Red <Input type="range" min="0" max="100" value="0" class ="slider" id = "redSlide">
+    Magenta <Input type="range" min="0" max="100" value="0" class ="slider" id = "magentaSlide">
     <p>
-    Green <Input type="range" min="0" max="100" value="0" class ="slider" id = "greenSlide">
-    <p>
-    Blue <Input type="range" min="0" max="100" value="0" class ="slider" id = "blueSlide">
-    <p>
-    Transparency
-    <input type="range"  min="0" max="100" value="100" id = "transSlide">
-
-    <p>
-    Size <Input type="range" min="5" max="40" value="0" class ="slider" id = "sizeSlide">
-
-
-
-
-      
+    Yellow <Input type="range" min="0" max="100" value="0" class ="slider" id = "yellowSlide">
     <p>  
-    Camera Angle <Input type="range" min="0" max="50" value="0" class ="slider" id = "angleSlider">      
+    Camera Angle <Input type="range" min="0" max="100" value="0" class ="slider" id = "angleSlide">      
     <p>
 
 
