--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <a href="ASG0/asg0.html">Assignment 0</a> <br>
         <a href="ASG1/asg1.html">Assignment 1</a> <br>
         <a href="ASG5A/src/asg5a.html">Assignment 5A</a> <br>
+        <a href="ASG2/blockyAnimal.html">Assignment 2</a> <br>
     </main>
 	<script src="index.js"></script>
   </body>
