added wall-e base, fix animation/render -> details

--- a/ASG2/blockyAnimal.html
+++ b/ASG2/blockyAnimal.html
@@ -23,15 +23,20 @@
     <script src="Cube.js"></script>
 
     <p>
-      Magenta <Input type="range" min="0" max="100" value="0" class ="slider" id = "magentaSlide">
+      Green <Input type="range" min="-50" max="50" value="0" class ="slider" id = "greenSlide">
+      <button type="button" id="animationGreenOnButton">ON</button>
+      <button type="button" id="animationGreenOffButton">OFF</button>   
+    <p>  
+    <p>
+      Magenta <Input type="range" min="0" max="40" value="0" class ="slider" id = "magentaSlide">
       <button type="button" id="animationMagentaOnButton">ON</button>
       <button type="button" id="animationMagentaOffButton">OFF</button> 
     <p>
-      Yellow <Input type="range" min="0" max="100" value="0" class ="slider" id = "yellowSlide">
+      Yellow <Input type="range" min="-10" max="30" value="0" class ="slider" id = "yellowSlide">
       <button type="button" id="animationYellowOnButton">ON</button>
       <button type="button" id="animationYellowOffButton">OFF</button>   
     <p>  
-      Camera Angle <Input type="range" min="0" max="100" value="0" class ="slider" id = "angleSlide">      
+      Camera Angle <Input type="range" min="0" max="360" value="0" class ="slider" id = "angleSlide">      
     <p>
 
   </body>
