fin. a little render glitch

--- a/ASG2/blockyAnimal.html
+++ b/ASG2/blockyAnimal.html
@@ -30,6 +30,8 @@
 
       <p>
         Basic animation
+        <button type="button" id="basicAnimationOn">ON</button>
+        <button type="button" id="basicAnimationOff">OFF</button>   
       </p>
 
     <p>
@@ -51,7 +53,9 @@
       Neck-tilt <Input type="range" min="-10" max="20" value="0" class ="slider" id = "yellowSlide">
       <button type="button" id="animationYellowOnButton">ON</button>
       <button type="button" id="animationYellowOffButton">OFF</button>   
-
+      <p>
+        <br>
+      <p id="numdot"> </p>
 
   </body>
 </html>
