--- a/ASG2/blockyAnimal.html
+++ b/ASG2/blockyAnimal.html
@@ -9,6 +9,10 @@
 
   <body onload="main()">
     <h1>Wall-E!</h1>
+    <audio id="wallESong" loop>
+      <source src="wallE.mp3" type="audio/mpeg">
+    </audio>
+    
     <canvas id="webgl" width="400" height="400"></canvas>
 
     <script src="lib/webgl-utils.js"></script>
@@ -35,7 +39,7 @@
       </p>
 
     <p>
-      Shift-click for additional animation!
+      Shift-click for additional animation! 
     </p>
 
     <br>
