1/11 tutorial. debugged, but blocks not appearing

--- a/ASG3A/world/World.html
+++ b/ASG3A/world/World.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Blocky Animal</title>
-    <link rel="stylesheet" href="blockyAnimal.css">
+    <!--<link rel="stylesheet" href="blockyAnimal.css">-->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   </head>
 
@@ -33,6 +33,9 @@
     <p>  
       Camera Angle <Input type="range" min="0" max="100" value="0" class ="slider" id = "angleSlide">      
     <p>
+<br>
+      <!--<p id="numdot"> </p>-->
+
 
   </body>
 </html>
