--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a href="ASG1/asg1.html">Assignment 1</a> <br>
         <a href="ASG5A/src/asg5a.html">Assignment 5A</a> <br>
         <a href="ASG2/blockyAnimal.html">Assignment 2</a> <br>
-        <a href="ASG3A/src/ASG3A.html">Assignment 3A </a> <br>
+        <a href="ASG3A/world/World.html">Assignment 3A </a> <br>
     </main>
 	<script src="index.js"></script>
   </body>
