make trash piles

--- a/ASG3A/world/World.html
+++ b/ASG3A/world/World.html
@@ -21,9 +21,18 @@
     <script src="Point.js"></script>
     <script src="Triangle.js"></script>
     <script src="Circle.js"></script>
+    <script src="Oval.js"></script>
     <script src="Cube.js"></script>
 
     <script src="World.js"></script>
+
+    <p>
+      What if WALL-E never found the plant, and thus, never left Earth? 
+      ...This world is in the year 3000, where Earth has stayed uninhabitable and 
+      desserted, and WALL-E has become petrified via dirt and dust, no longer 
+      operating as the years flow by.
+    </p>
+
     <p>
       Camera/Movement Keys: <br>
       Q- Rotate Right <br>
@@ -33,6 +42,8 @@
       Arrow Keys- Move Forward, Back, Left, and Right <br>
       Can use the rotate camera with mouse movement
     <p>
+
+      
       Magenta <Input type="range" min="0" max="100" value="0" class ="slider" id = "magentaSlide">
       <button type="button" id="animationMagentaOnButton">ON</button>
       <button type="button" id="animationMagentaOffButton">OFF</button> 
