--- a/ASG3A/world/World.html
+++ b/ASG3A/world/World.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <title>Blocky World</title>
-    <!--<link rel="stylesheet" href="blockyAnimal.css">-->
+    <link rel="stylesheet" href="World.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   </head>
 
   <body onload="main()">
-    <canvas id="webgl" width="400" height="400"></canvas>
+    <h1>Earth 3000</h1>
+    <canvas id="webgl" width="450" height="450"></canvas>
 
     <script src="lib/webgl-utils.js"></script>
     <script src="lib/webgl-debug.js"></script>
@@ -26,11 +27,11 @@
 
     <script src="World.js"></script>
 
-    <p>
+    <p id = "intro">
       What if WALL-E never found the plant, and thus, never left Earth? 
-      ...This world is in the year 3000, where Earth has stayed uninhabitable and 
+      ...This world is set in the year 3000, where Earth remains uninhabitable and 
       desserted, and WALL-E has become petrified via dirt and dust, no longer 
-      operating as the years flow by.
+      operational as the years flow by.
     </p>
 
     <p>
@@ -41,16 +42,14 @@
       <br>
       Arrow Keys- Move Forward, Back, Left, and Right <br>
       Can use the rotate camera with mouse movement
-    <p>
-
-      
+    <!--<p>
       Magenta <Input type="range" min="0" max="100" value="0" class ="slider" id = "magentaSlide">
       <button type="button" id="animationMagentaOnButton">ON</button>
       <button type="button" id="animationMagentaOffButton">OFF</button> 
     <p>
       Yellow <Input type="range" min="0" max="100" value="0" class ="slider" id = "yellowSlide">
       <button type="button" id="animationYellowOnButton">ON</button>
-      <button type="button" id="animationYellowOffButton">OFF</button>   
+      <button type="button" id="animationYellowOffButton">OFF</button>   -->
 
 <br>
       <!--<p id="numdot"> </p>-->
