fixed world. add details + submit

--- a/ASG3A/world/World.html
+++ b/ASG3A/world/World.html
@@ -27,6 +27,10 @@
 
     <script src="World.js"></script>
 
+    <p id = "obj">
+      Eve was forcibly shut down and hidden. <br> Find her so she can re-activate and save WALL-E!
+    </p>
+
     <p id = "intro">
       What if WALL-E never found the plant, and thus, never left Earth? 
       ...This world is set in the year 3000, where Earth remains uninhabitable and 
@@ -52,7 +56,7 @@
       <button type="button" id="animationYellowOffButton">OFF</button>   -->
 
 <br>
-      <!--<p id="numdot"> </p>-->
+      <p id="numdot"> </p>
 
 
   </body>
