implement adding/subtracting block

--- a/ASG3A/world/World.html
+++ b/ASG3A/world/World.html
@@ -44,7 +44,8 @@
       E- Rotate Left <br>
         Camera Angle <Input type="range" min="0" max="360" value="0" class ="slider" id = "angleSlide">      
       <br>
-      Arrow Keys- Move Forward, Back, Left, and Right <br>
+      W, A, S, D Keys- Move Forward, Back, Left, and Right <br>
+      <br> Use up and down to fly or dive <br>
       Can use the rotate camera with mouse movement
     <!--<p>
       Magenta <Input type="range" min="0" max="100" value="0" class ="slider" id = "magentaSlide">
