--- a/ASG3A/world/World.html
+++ b/ASG3A/world/World.html
@@ -59,7 +59,7 @@
         Q- Rotate Left <br>
         Up / down arrow <br>
         Camera rotates via moving mouse <br>
-        Note: Click for music!
+        Note: Reload to re-center. Click for music!
         <br><br>
         <div id = "obj">
           Mission Brief: <br>
