--- a/ASG5A/src/asg5a.html
+++ b/ASG5A/src/asg5a.html
@@ -16,7 +16,7 @@
           }
       </script>
 </head>
-<body>
+<body id = "playMusic">
     <script src="main.js" type="module"></script>
 </body>
 </html>
