adding base asg4

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <a href="ASG5A/src/asg5a.html">Assignment 5A</a> <br>
         <a href="ASG2/blockyAnimal.html">Assignment 2</a> <br>
         <a href="ASG3A/world/World.html">Assignment 3A </a> <br>
+        <a href="ASG4/asg4.html">Assignment 4</a> <br>
     </main>
 	<script src="index.js"></script>
   </body>
