have base down:

--- a/ASG4/world_copy/World.html
+++ b/ASG4/world_copy/World.html
@@ -21,6 +21,7 @@
     <script src="Circle.js"></script>
     <script src="Oval.js"></script>
     <script src="Cube.js"></script>
+    <script src="Sphere.js"></script>
 
     <script src="World.js"></script>
 
