--- a/ASG4/world_copy/World.html
+++ b/ASG4/world_copy/World.html
@@ -30,6 +30,12 @@
     <button type="button" id ="normalOn">Normal ON</button>
     <button type="button" id ="normalOff">Normal OFF</button>
 
+    <p>
+      Light X <input type="range" min="-250" max="250" value="0" class="slider" id="lightSlideX">
+      Light Y <input type="range" min="-250" max="250" value="100" class="slider" id="lightSlideY">
+      Light Z <input type="range" min="-250" max="250" value="-250" class="slider" id="lightSlideZ">
+    </p>
+
     <!--Camera Angle <Input type="range" min="0" max="360" value="0" class ="slider" id = "angleSlide">-->      
     <!--<p>
       Magenta <Input type="range" min="0" max="100" value="0" class ="slider" id = "magentaSlide">
