--- a/ASG4/world_copy/World.html
+++ b/ASG4/world_copy/World.html
@@ -36,7 +36,7 @@
       Light Z <input type="range" min="-250" max="250" value="-250" class="slider" id="lightSlideZ">
     </p>
 
-    <!--Camera Angle <Input type="range" min="0" max="360" value="0" class ="slider" id = "angleSlide">-->      
+    Camera Angle <Input type="range" min="0" max="360" value="0" class ="slider" id = "angleSlide"> 
     <!--<p>
       Magenta <Input type="range" min="0" max="100" value="0" class ="slider" id = "magentaSlide">
       <button type="button" id="animationMagentaOnButton">ON</button>
