--- a/ASG4/world_copy/World.html
+++ b/ASG4/world_copy/World.html
@@ -30,6 +30,9 @@
     <button type="button" id ="normalOn">Normal ON</button>
     <button type="button" id ="normalOff">Normal OFF</button>
 
+    <button type="button" id ="lightOn">Light ON</button>
+    <button type="button" id ="lightOff">Light OFF</button>
+
     <p>
       Light X <input type="range" min="-250" max="250" value="0" class="slider" id="lightSlideX">
       Light Y <input type="range" min="-250" max="250" value="100" class="slider" id="lightSlideY">
