--- a/ASG4/world_copy/World.html
+++ b/ASG4/world_copy/World.html
@@ -38,6 +38,12 @@
     </p>
 
     <p>
+      <input type="range" min="0" max="255" value="0" id="redSlider">
+      <input type="range" min="0" max="255" value="0" id="greenSlider">
+      <input type="range" min="0" max="255" value="0" id="blueSlider">        
+    </p>
+
+    <p>
       Light X <input type="range" min="-250" max="250" value="0" class="slider" id="lightSlideX">
       Light Y <input type="range" min="-250" max="250" value="100" class="slider" id="lightSlideY">
       Light Z <input type="range" min="-250" max="250" value="-250" class="slider" id="lightSlideZ">
