--- a/ASG4/world_copy/World.html
+++ b/ASG4/world_copy/World.html
@@ -38,9 +38,10 @@
     </p>
 
     <p>
-      <input type="range" min="0" max="255" value="0" id="redSlider">
-      <input type="range" min="0" max="255" value="0" id="greenSlider">
-      <input type="range" min="0" max="255" value="0" id="blueSlider">        
+      Lighting color (RGB) <br>
+      Red<input type="range" min="0" max="255" value="255" id="redSlider">
+      Green<input type="range" min="0" max="255" value="255" id="greenSlider">
+      Blue<input type="range" min="0" max="255" value="255" id="blueSlider">        
     </p>
 
     <p>
