--- a/ASG4/world_copy/World.html
+++ b/ASG4/world_copy/World.html
@@ -38,6 +38,11 @@
     </p>
 
     <p>
+      <button type="button" id ="spotlightOn">Spotight ON</button>
+      <button type="button" id ="spotlightOff">Spotight OFF</button>
+    </p>
+
+    <p>
       Lighting color (RGB) <br>
       Red<input type="range" min="0" max="255" value="255" id="redSlider">
       Green<input type="range" min="0" max="255" value="255" id="greenSlider">
