--- a/ASG5A/src/asg5a.html
+++ b/ASG5A/src/asg5a.html
@@ -15,8 +15,31 @@
               }
           }
       </script>
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+      <style>
+
+        .poppins-regular {
+        font-family: "Poppins", sans-serif;
+        font-weight: 400;
+        font-style: normal;
+        }
+        #info {
+            position: absolute;
+            top: 10px;
+            width: 100%;
+            text-align: center;
+            z-index: 100;
+            display:block;
+            color: white;
+            background-color: black;
+        }
+      </style>
 </head>
 <body id = "playMusic">
     <script src="main.js" type="module"></script>
+    <div id="info" class="poppins-regular">Solar System Simulator (including significant moons). Wait at least 30s to see the intended animated orbit scene! Can drag and zoom. </div>
+
 </body>
 </html>
