--- a/ASG5A/src/asg5a.html
+++ b/ASG5A/src/asg5a.html
@@ -39,7 +39,7 @@
 </head>
 <body id = "playMusic">
     <script src="main.js" type="module"></script>
-    <div id="info" class="poppins-regular">Solar System Simulator (including significant moons). Wait at least 30s to see the intended animated orbit scene! Can drag and zoom. </div>
+    <div id="info" class="poppins-regular">Solar System Simulator (including significant moons). Wait at least 30s to see the intended animated orbit scene! Can drag and zoom, music plays after initial interaction. </div>
 
 </body>
 </html>
